--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "c68",
-    "slug": "c68",
+    "name": "aashc68",
+    "slug": "aashc68",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
